--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>model</module>
         <module>server-gateway</module>
     </modules>
+<!--    今天是个好日子-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
