--- a/service/service-product/src/main/resources/application.yaml
+++ b/service/service-product/src/main/resources/application.yaml
@@ -16,3 +16,13 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
 
+#自定义配置
+app:
+  minio:
+    endpoint: "http://192.168.200.100:9000"
+    ak: admin
+    sk: admin123456
+    bucketName: gmall
+
+
+
