--- a/service/service-item/src/main/resources/application.yaml
+++ b/service/service-item/src/main/resources/application.yaml
@@ -4,3 +4,25 @@ server:
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration  #排除数据源
+  redis:
+    host: 192.168.200.100
+    password: Spf123456
+  zipkin:
+    base-url: http://192.168.200.100:9411/
+    sender:
+      type: web
+
+app:
+  thread-pool:
+    core: 4
+    max: 8
+    queue-size: 2000
+    keep-alive-time: 300 #秒为单位
+
+
+#暴露所有监控点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
