布隆过滤器优化完成

--- a/service/service-item/pom.xml
+++ b/service/service-item/pom.xml
@@ -29,11 +29,19 @@
             <scope>test</scope>
         </dependency>
 
-<!--        SpingBoot的整个线上监控-->
+        <!--        SpingBoot的整个线上监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
+
 
 
     </dependencies>
