--- a/server-gateway/src/main/resources/application.yaml
+++ b/server-gateway/src/main/resources/application.yaml
@@ -27,6 +27,12 @@ spring:
           uri: lb://service-product
           predicates:  #断言
             - Path=/admin/product/**
+
+        - id: incr_route
+          uri: lb://service-item
+          predicates:
+            - Path=/lock/incr
+
         - id: web-all_route # 以 /admin/product 开头的所有请求都lb(loadbalancer)转给service-product
           uri: lb://web-all
           predicates: #断言
