布隆过滤器定时重建

--- a/service/service-item/pom.xml
+++ b/service/service-item/pom.xml
@@ -41,7 +41,11 @@
             <version>31.1-jre</version>
         </dependency>
 
-
+<!--        切面：AOP-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
 
     </dependencies>
