缓存自定义starter

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>service</module>
         <module>model</module>
         <module>server-gateway</module>
+        <module>mall-cache-starter</module>
     </modules>
 
     <parent>
