--- a/service/service-product/pom.xml
+++ b/service/service-product/pom.xml
@@ -37,6 +37,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>mall-cache-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
