--- a/service/service-item/src/main/resources/application.yaml
+++ b/service/service-item/src/main/resources/application.yaml
@@ -2,15 +2,17 @@ server:
   port: 9002
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration  #排除数据源
-  redis:
-    host: 192.168.200.100
-    password: Spf123456
-  zipkin:
-    base-url: http://192.168.200.100:9411/
-    sender:
-      type: web
+#  redis:
+#    host: 192.168.200.100
+#    password: Spf123456
+#  zipkin:
+#    base-url: http://192.168.200.100:9411/
+#    sender:
+#      type: web
 
 app:
   thread-pool:
