--- a/service/web-all/src/main/resources/application.yaml
+++ b/service/web-all/src/main/resources/application.yaml
@@ -12,7 +12,17 @@ spring:
     suffix: .html
 
     #链路追踪（rg.springframework.web.client.ResourceAccessException: I/O error on POST request for ）
-  zipkin:
-    base-url: http://192.168.200.100:9411/
-    sender:
-      type: web
+  main:
+    allow-bean-definition-overriding: true
+#  zipkin:
+#    base-url: http://192.168.200.100:9411/
+#    sender:
+#      type: web
+
+#feign:
+#  client:
+#    config:
+#      default:  #所有的@FeignClient 标注的feign客户端全部使用这个配置
+#        connectTimeout: 1000
+#        readTimeout: 5000
+#        retryer: com.atguigu.gmall.common.retry.MyRetryer
