第十二天结束

--- a/service/service-search/src/main/resources/application.yaml
+++ b/service/service-search/src/main/resources/application.yaml
@@ -7,3 +7,12 @@ spring:
   elasticsearch:
     rest:
       uris: http://192.168.200.100:9200
+
+
+#dsl:
+#  aaa: findhaHAdadada
+#  ALL --- TRACE --- DEBUG --- INFO --WARN -- ERROR --OFF
+logging:
+  level:
+    tracer: trace  #打开追踪器
+    org.elasticsearch: trace
