--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>redisson</artifactId>
             <version>3.17.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0</version>
+        </dependency>
 
     </dependencies>
 
