--- a/model/pom.xml
+++ b/model/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <scope>provided </scope>
         </dependency>
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>common-util</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 
