--- a/server-gateway/src/main/resources/application.yaml
+++ b/server-gateway/src/main/resources/application.yaml
@@ -38,9 +38,28 @@ spring:
           predicates:
             - Path=/api/user/**
 
+        - id: cart_router
+          uri: lb://service-cart
+          predicates:
+            - Path=/api/cart/**
+
         - id: web-all_route # 以 /admin/product 开头的所有请求都lb(loadbalancer)转给service-product
           uri: lb://web-all
           predicates: #断言
             - Host=**.gmall.com
 
+app:
+  auth:
+    no-auth-url:  #任意人无需登录都能访问的路径
+      - /css/**
+      - /js/**
+      - /img/**
+      - /login.html
+      - /api/user/passport/login
 
+    login-auth-url: #登录以后才能访问的资源
+      - /order/**
+    deny-url:
+      - /api/inner/**
+
+    login-page: http://passport.gmall.com/login.html
