--- a/service/service-cart/src/main/resources/bootstrap.properties
+++ b/service/service-cart/src/main/resources/bootstrap.properties
@@ -1,7 +1,3 @@
-
-spring.application.name=server-gateway
-
-
+spring.application.name=service-cart
 spring.cloud.nacos.server-addr=192.168.200.100:8848
-
 spring.cloud.nacos.config.shared-configs[0].data-id=common.yaml
