--- a/mall-cache-starter/pom.xml
+++ b/mall-cache-starter/pom.xml
@@ -15,18 +15,13 @@
     <artifactId>mall-cache-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
     <dependencies>
-        <!--        所有starter的基础依赖-->
+        <!--        所有start的基础依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -42,8 +37,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-
-
     </dependencies>
 
 
