--- a/service/service-order/src/main/resources/application.yaml
+++ b/service/service-order/src/main/resources/application.yaml
@@ -13,5 +13,19 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+#  rabbitmq:
+#    username: admin
+#    password: admin
+#    host: 192.168.200.100
+#    port: 5672
+#    virtual-host: /   #虚拟主机
+#    publisher-returns: true #发布者返回（消息成功标志）
+#    publisher-confirm-type: simple   #开启发布者简单确认机制
+#    listener: #监听器帮我们拿到消息。默认自动ack
+#      type: simple
+#      simple:
+#        acknowledge-mode: manual #开启手动确认机制，除非程序员自己ack，否则服务器都认为消息还未回复
+#        batch-size: 12 #批量大小
+
 app:
   ware-url: http://localhost:9007/
