--- a/service/service-order/src/main/resources/bootstrap.properties
+++ b/service/service-order/src/main/resources/bootstrap.properties
@@ -3,3 +3,4 @@ spring.application.name=service-order
 spring.cloud.nacos.server-addr=192.168.200.100:8848
 
 spring.cloud.nacos.config.shared-configs[0].data-id=common.yaml
+spring.cloud.nacos.config.shared-configs[1].data-id=rabbit.yaml
