支付异步通知

--- a/server-gateway/src/main/resources/application.yaml
+++ b/server-gateway/src/main/resources/application.yaml
@@ -48,6 +48,11 @@ spring:
           predicates:
             - Path=/api/order/**
 
+        - id: pay_router
+          uri: lb://service-pay
+          predicates:
+            - Path=/api/payment/**
+
         - id: web-all_route # 以 /admin/product 开头的所有请求都lb(loadbalancer)转给service-product
           uri: lb://web-all
           predicates: #断言
